# trackbit_school

./: .gitignore  CLAUDE.md  README.md  trackbit-school-prd-v1.md  trackbit-school-prd-v2.md
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 68d07710c0bf_notifications_retry_count.py  a1b2c3d4e5f6_rls_null_safe_cast.py  a2b3c4d5e6f7_demo_requests.py  a7b8c9d0e1f2_user_auth_fields.py  a8b9c0d1e2f3_lesson_observations.py  b2c3d4e5f6a7_activation_funnel_view.py  b3c4d5e6f7a8_demo_request_notes.py  b8c9d0e1f2a3_password_reset_token.py  c3f1a2b4d5e6_phase4_billing_unassigned.py  (+31 more)
api/app/: main.py
api/scripts/: init-db.sql  provision_app_role.py  seed.py  seed_platform.py
api/tests/: conftest.py  test_ai_client.py  test_analytics.py  test_assessments.py  test_attachments.py  test_attendance.py  test_auth.py  test_billing.py  test_calendar.py  test_classroom.py  test_daily_report.py  test_dashboard.py  test_exams.py  test_fee_math.py  test_fees.py  test_growth.py  test_health.py  test_hostel_sessions.py  test_ingest_and_exams.py  test_invites.py  test_lucy.py  test_lucy_views.py  test_marketing.py  test_master_data.py  test_member_auth.py  test_member_removal.py  test_midyear.py  test_parent_portal.py  test_periods.py  test_phase1.py  test_phase4.py  test_plan_generation.py  test_planner.py  test_platform.py  test_recommendations.py  test_recurrence.py  test_reports.py  test_rls.py  test_roles.py  test_roster_import.py  (+9 more)
(+457 files in other folders)
